# Py_drf_hw

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/pizza/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/pizza/migrations/: 0002_pizzamodel_pizza_shop.py  0004_alter_pizzamodel_name_alter_pizzamodel_size.py
apps/pizza_shops/: apps.py  serializers.py  urls.py  views.py
apps/user/: serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/pizza/: filter.py  models.py  serializers.py  urls.py  views.py
backend/apps/pizza_shops/: models.py  serializers.py  urls.py  views.py
backend/apps/user/: managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: rest_conf.py
backend/core/: models.py  pagination.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/services/: email_service.py  file_service.py  jwt_service.py
backend/templates/: recovery.html  register.html  test_email.html
client/: asset-manifest.json  index.html
client/static/js/: main.e81de58c.js  (+1 more)
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
frontend/: package.json
frontend/src/: App.js
pizza/: models.py  serializers.py  views.py
pizza/migrations/: 0001_initial.py  0002_pizzamodel_delete_pizza.py  0003_alter_pizzamodel_options.py  0004_alter_pizzamodel_options.py
(+9 files in other folders)
